episode/tests/snapshots/snapshots_names__episode_names@Castaway_Isle_S49E03_1080p_WEB_h264_EDNA_xyz_mkv.snap
---
source: tests/snapshots_names.rs
description: Castaway.Isle.S49E03.1080p.WEB.h264-EDNA-xyz.mkv
expression: ep
---
Episode {
    file_name: "Castaway.Isle.S49E03.1080p.WEB.h264-EDNA-xyz.mkv",
    title: Some(
        "Castaway Isle",
    ),
    season: Some(
        49,
    ),
    episodes: [
        3,
    ],
    kind: Regular,
    version: None,
    part: None,
    release_group: Some(
        "EDNA-xyz",
    ),
}
