episode/tests/snapshots/snapshots_names__episode_names@Castaway_Isle_S49E07_Blood_in_the_Water_1080p_AMZN_WEB_DL_DD.snap
---
source: tests/snapshots_names.rs
description: Castaway.Isle.S49E07.Blood.in.the.Water.1080p.AMZN.WEB-DL.DDP5.1.H.264-BLOOMS.mkv
expression: ep
---
Episode {
    file_name: "Castaway.Isle.S49E07.Blood.in.the.Water.1080p.AMZN.WEB-DL.DDP5.1.H.264-BLOOMS.mkv",
    title: Some(
        "Castaway Isle",
    ),
    season: Some(
        49,
    ),
    episodes: [
        7,
    ],
    kind: Regular,
    version: None,
    part: None,
    release_group: Some(
        "BLOOMS",
    ),
}
