episode/tests/snapshots/snapshots_names__episode_names@Kite_Panda_3_t05_mkv.snap
---
source: tests/snapshots_names.rs
description: Kite Panda 3_t05.mkv
expression: ep
---
Episode {
    file_name: "Kite Panda 3_t05.mkv",
    title: Some(
        "Kite Panda 3 t05",
    ),
    season: None,
    episodes: [],
    kind: Movie,
    version: None,
    part: None,
    release_group: None,
}
