episode/tests/snapshots/snapshots_names__episode_names@Paper_Kites_2004_REPACK_DUAL_1080p_BluRay_x265_DDP5_1_B3ARD_.snap
---
source: tests/snapshots_names.rs
description: Paper.Kites.2004.REPACK.DUAL.1080p.BluRay.x265.DDP5.1-B3ARD.mkv
expression: ep
---
Episode {
    file_name: "Paper.Kites.2004.REPACK.DUAL.1080p.BluRay.x265.DDP5.1-B3ARD.mkv",
    title: Some(
        "Paper Kites",
    ),
    season: None,
    episodes: [],
    kind: Movie,
    version: None,
    part: None,
    release_group: Some(
        "B3ARD",
    ),
}
