episode/tests/snapshots/snapshots_names__episode_names@Show_Name_S00E01_Special_mkv.snap
---
source: tests/snapshots_names.rs
description: Show.Name.S00E01.Special.mkv
expression: ep
---
Episode {
    file_name: "Show.Name.S00E01.Special.mkv",
    title: Some(
        "Show Name",
    ),
    season: Some(
        0,
    ),
    episodes: [
        1,
    ],
    kind: Special,
    version: None,
    part: None,
    release_group: None,
}
