episode/tests/snapshots/snapshots_names__episode_names@The_Grand_Village_Bake_S16E02_720p_WEB_H264_JFX_TVZE_mkv.snap
---
source: tests/snapshots_names.rs
description: The Grand Village Bake S16E02 720p WEB H264 JFX TVZE.mkv
expression: ep
---
Episode {
    file_name: "The Grand Village Bake S16E02 720p WEB H264 JFX TVZE.mkv",
    title: Some(
        "The Grand Village Bake",
    ),
    season: Some(
        16,
    ),
    episodes: [
        2,
    ],
    kind: Regular,
    version: None,
    part: None,
    release_group: Some(
        "TVZE",
    ),
}
